# but

./: Cargo.toml  LICENSE  README.md  but.service
.github/workflows/: debug.yml  release.yml
src/: main.rs
