[package]
name = "but"
version = "0.0.1"
edition = "2021"

[profile.release]
strip = true
opt-level = "z"
lto = true
debug = false
panic = "abort"
codegen-units = 1

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
zip = "2.1.3"
walkdir = "2.5.0"
zstd = "0.13.2"
tar = "0.4.41"
toml = "0.8.14"
anyhow = "1.0.86"